# maqam

./: .gitmodules  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
example/: build.gradle.kts
example/src/androidTest/java/im/taqs/maqam/example/: ExampleInstrumentedTest.kt
example/src/main/: AndroidManifest.xml
example/src/main/java/im/taqs/maqam/example/: AudioApplication.kt  Demo.kt  DemoConstants.kt  MainActivity.kt
example/src/main/java/im/taqs/maqam/example/ui/theme/: Color.kt  Theme.kt  Type.kt
example/src/main/res/values/: strings.xml  themes.xml
example/src/test/java/im/taqs/maqam/example/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
maqam/: build.gradle.kts
maqam/src/main/cpp/: CMakeLists.txt  library.cpp  log.h  maqam.cpp  maqam.h
maqam/src/main/cpp/client/: maqam.c  maqam.h
maqam/src/main/cpp/impl/: AudioGraph.cpp  AudioGraph.h  AudioNode.cpp  AudioNode.h  AudioRoot.cpp  AudioRoot.h  NativeWrapper.cpp  NativeWrapper.h
maqam/src/main/cpp/nodes/: AudioProcessorHelpers.h  CMakeLists.txt  ValueTreeProvider.h  nodes.h
maqam/src/main/cpp/nodes/ak_sampler/: AKSamplerProcessorEx.cpp  AKSamplerProcessorEx.h  AKSamplerProcessorExJNI.cpp
maqam/src/main/cpp/nodes/ak_sampler/dsp/Plugin/: AKSamplerProcessor.cpp  AKSamplerProcessor.h  JuceHeader.h
maqam/src/main/cpp/nodes/ak_sampler/dsp/Sampler/: Sampler.cpp
maqam/src/main/cpp/nodes/delay/: DelayProcessor.cpp  DelayProcessor.h
maqam/src/main/cpp/nodes/filter/: FilterProcessor.cpp  FilterProcessor.h
maqam/src/main/cpp/nodes/sc_reverb/: SCReverbProcessor.cpp  SCReverbProcessor.h
maqam/src/main/cpp/nodes/test_tone/: SineWave.h  SineWaveAudioProcessor.h
maqam/src/main/java/im/taqs/maqam/: AudioGraph.kt  AudioNode.kt  AudioRoot.kt  Library.kt
maqam/src/main/java/im/taqs/maqam/ext/: AudioNodeExt.kt  AudioNodeMetadataExt.kt  AudioNodeParameterExt.kt  AudioNodeStateExt.kt  MidiEventEx.kt  MidiExt.kt
maqam/src/main/java/im/taqs/maqam/impl/: AudioNodeMetadata.kt  AudioNodeParameter.kt  AudioNodeProperty.kt  AudioNodeState.kt  Midi.kt  MidiEvent.kt  NativeWrapper.kt  Variant.kt
maqam/src/main/java/im/taqs/maqam/node/: AKSampler.kt  Control.kt  Delay.kt  Filter.kt  SCReverb.kt  SFZPlayer.kt  TestTone.kt
